[package]
name = "telegram-images-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
futures = "0.3.31"
log = "0.4.27"
reqwest = {version = "0.12.22",features = ["native-tls"] }
teloxide = { version = "0.16.0",features = ["macros","rustls"] }
tokio = { version = "1.46.1",features = ["full"] }
#tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time", "fmt"] }
uuid = { version = "1.17.0",features = ["v4"] }
zip = "4.2.0"

[profile.release]
# https://github.com/microsoft/edit/blob/main/Cargo.toml#L22-L30
codegen-units = 1
debug = "full"
lto = true
opt-level = "s"
panic = "abort"
split-debuginfo = "packed"
strip = "symbols"
incremental = true